<resources>
    <string name="app_name">KalKal</string>
    <string name="action_logout">Logout</string>

    <string name="send">Kirim</string>
    <string name="duration">Durasi Olahraga (menit)</string>
    <string name="height">Tinggi Badan (cm)</string>
    <string name="temperature">Suhu Tubuh (celcius)</string>
    <string name="weight">Berat Badan (kg)</string>
    <string name="rate">Detak Jantung (bpm)</string>
    <string name="age">Umur (tahun)</string>
    <string name="username">Nama Pengguna</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="password">Kata Sandi</string>
</resources>